Bug 1304199 - Fix nsWindow::GetNativeData called with bad value. r=erahm

MozReview-Commit-ID: EwvoZCkmliH